<resources>
    <string name="app_name">HospitalPatients</string>
    <string name="Enter">Войти как гость</string>
    <string name="type">Информационно-справочная система</string>
    <string name="name">Пациенты больницы</string>
    <string name="roomType">Тип палаты</string>
    <string name="building">Корпус</string>
    <string name="department">Отделение</string>
    <string name="room">Палата</string>
    <string name="addRoom">Добавить кабинет</string>
    <string name="main">На главную</string>
    <string name="cardNum">Номер карты</string>
    <string name="FIO">ФИО пациента</string>
    <string name="age">Возраст</string>
    <string name="diagnose">Диагноз</string>
    <string name="addPatient">Добавить пациента</string>
    <string name="employeeID">ID сотрудника</string>
    <string name="employeeFIO">ФИО сотрудника</string>
    <string name="addEmployee">Добавить сотрудника</string>
    <string name="back">Назад</string>
    <string name="checkDoc">Просмотреть врача</string>
    <string name="checkRoom">Просмотреть палаты</string>
    <string name="checkPat">Просмотреть пациентов</string>
    <string name="addDoc">Добавить врача</string>
    <string name="addPlace">Добавить палату</string>
    <string name="addPat">Добавить пациента</string>
    <string name="delPat">Удалить пациента</string>
    <string name="auth">Авторизация</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="reg">Регистрация</string>
    <string name="enterMail">Введите почту</string>
    <string name="enterPass">Введите пароль</string>
    <string name="repeatPass">Повторите пароль</string>
    <string name="id">ID:</string>
    <string name="card">Карта</string>
    <string name="doctor">Врач</string>
    <string name="hospitalization">Госпитализация</string>
</resources>